--- a/src/componentes/ItemListContainer/ItemListContainer.css
+++ b/src/componentes/ItemListContainer/ItemListContainer.css
@@ -10,9 +10,13 @@
   margin: 30px 0;
   animation: pulso 2s infinite;
 }
-.contenedor{
-background-color: #3a3a3a; 
-padding: 0.8rem 1.5rem;
-border-bottom: 2px solid #39ff14;
-height: 500px;
+@keyframes sirenaOscura {
+  0%   { background-color: #0a0a0a; }   
+  50%  { background-color: #2c2c2c; }   
+  100% { background-color: #0a0a0a; }
+}
+
+body {
+  animation: sirenaOscura 3s infinite;
+  transition: background-color 1s ease-in-out;
 }
