--- a/src/componentes/ItemDetail/ItemDetail.css
+++ b/src/componentes/ItemDetail/ItemDetail.css
@@ -84,6 +84,24 @@
   background-color: #00ffff;
   transform: scale(1.05);
 }
+.link-carrito {
+  text-decoration: none;  
+  font-size: 20px;         
+  margin-bottom: 10px;     
+  display: inline-block;  
+  font-weight: bold; 
+  color:#39ff14;
+  transition: all 0.3s ease;
+  transform-origin: center;  
+  margin-left: 20px;
+}
+
+.link-carrito:hover {
+  transform: scale(1.1);
+  color: #007bff;
+}
+
+
 
 .item-button:active {
   transform: scale(0.95);
@@ -94,5 +112,13 @@
     margin: 10px 0;
     flex-direction: column; 
     padding: 15px;
+    
   }
+  .boton-accion {
+  display: block;     
+  width: 50%;            
+  margin-bottom: 12px;    
+  padding: 8px 12px;       
+
+}
 }
