--- a/src/componentes/Cart/Cart.css
+++ b/src/componentes/Cart/Cart.css
@@ -1,7 +1,7 @@
 .carrito{
    padding: 30px;
    background-color:#3A3A3A;
-   border-Bottom: 2px solid #39ff14;
+   border-Bottom: 2px solid #D4AF37;
 }
 h3,h2,p{
     margin: 20px;
