--- a/src/componentes/Checkout/Checkout.css
+++ b/src/componentes/Checkout/Checkout.css
@@ -8,8 +8,8 @@ h1 {
   text-align: center;
   font-size: 2.5rem;
   margin-top: 2rem;
-  color: #39ff14;
-  text-shadow: 0 0 10px #39ff14;
+  color: #D4AF37;
+  text-shadow: 0 0 10px #D4AF37;
 }
 
 form {
@@ -20,7 +20,7 @@ form {
   margin: 2rem auto;
   padding: 2rem;
   background: rgba(0, 255, 231, 0.05);
-  border: 1px solid #39ff14;
+  border: 1px solid #D4AF37;
   border-radius: 12px;
   box-shadow: 0 0 20px #00ffe733;
 }
@@ -28,7 +28,7 @@ form {
 label {
   font-size: 1rem;
   margin-bottom: 0.3rem;
-  color: #39ff14;
+  color: rgb(255, 0, 0);
 }
 
 input {
@@ -36,9 +36,9 @@ input {
   padding: 0.8rem;
   font-size: 1rem;
   background: #111;
-  border: 1px solid #39ff14;
+  border: 1px solid #D4AF37;
   border-radius: 8px;
-  color: #39ff14;
+  color: #D4AF37;
   outline: none;
   box-shadow: inset 0 0 5px #00ffe755;
   resize: vertical;
@@ -48,7 +48,7 @@ input {
 button {
   padding: 0.8rem 1.2rem;
   font-size: 1rem;
-  background: #39ff14;
+  background: #D4AF37;
   color: white;
   border: none;
   border-radius: 8px;
