--- a/src/componentes/ItemListContainer/ItemListContainer.css
+++ b/src/componentes/ItemListContainer/ItemListContainer.css
@@ -1,11 +1,11 @@
 .titulo-motivador {
-  color: #39ff14;
+  color: #D4AF37;
   font-family: 'Rajdhani', sans-serif;
   font-weight: 800;
   font-size: 2.5rem;
   text-transform: uppercase;
   letter-spacing: 2px;
-  text-shadow: 0 0 8px #39ff14, 0 0 15px #39ff14;
+  text-shadow: 0 0 8px #D4AF37, 0 0 15px #D4AF37;
   text-align: center;
   margin: 30px 0;
   animation: pulso 2s infinite;
