--- a/src/componentes/NavBar/NavBar.css
+++ b/src/componentes/NavBar/NavBar.css
@@ -6,14 +6,16 @@
 .custom-navbar {
   background-color: #000; 
   padding: 0.8rem 1.5rem;
-  border-bottom: 2px solid #39ff14;
+  border-bottom: 2px solid #D4AF37
+;
   
 }
 .text-fluor:hover {
   color: white;
 }
 .text-fluor {
-  color: #39ff14;
+  color: #D4AF37
+;
   text-decoration: none;
 
 }
@@ -27,7 +29,7 @@ li {
   margin-bottom: 1rem;
   padding: 1rem;
   background: #111;
-  border: 1px solid #39ff14;
+  border: 1px solid #D4AF37;
   border-radius: 8px;
   box-shadow: 0 0 10px #00ffe733;
   display: flex;
